- change memory check to megabytes to more accurate - support smaller instances for testing